--- a/menu.html
+++ b/menu.html
@@ -23,7 +23,7 @@
             <!-- Nav Bar -->
             <nav class="navbar fixed-top navbar-expand-lg navbar-light" style="background-color: #EEEBDD; opacity: 0.9; padding: 2%">
            
-              <a class="navbar-brand" href="index.html"><img src="/images/menu-header.png" alt="Eggheads-Diner" height="50"></a>
+              <a class="navbar-brand" href="index.html"><img src="menu-header.png" alt="Eggheads-Diner" height="50"></a>
               
            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
              <span class="navbar-toggler-icon"></span>
