--- a/menu.html
+++ b/menu.html
@@ -18,6 +18,8 @@
     <script src="https://kit.fontawesome.com/5b584741d8.js" crossorigin="anonymous"></script>
 </head>
   <body>
+
+
     <section id="title">
         <div class="container-fluid">
             <!-- Nav Bar -->
@@ -57,7 +59,7 @@
           </section>
 
           <!-- MENU -->
-          <section id="specialty">
+          <section id="menu">
             <div class"row)>
                 <div class="col-12">
                     <br/><br/><br/>
@@ -123,7 +125,7 @@
             </div>
               </section>
 
-              <section id="breakfast-platters">
+              <section id="menu2">
 
                 <div class"row)>
                     <div class="col-12">
@@ -155,7 +157,7 @@
                 </div>
                   </section>
 
-                  <section id="omelets">
+                  <section id="menu">
                     <div class"row)>
                         <div class="col-12">
                           <br/><br/><br/><br/>
@@ -211,7 +213,7 @@
                     </div>
                       </section>
 
-                      <section id="bowls">
+                      <section id="menu2">
 
                         <div class"row)>
                             <div class="col-12">
